Small styling change due to gap in home page pictures on Chrome not correct.

--- a/css/index.css
+++ b/css/index.css
@@ -437,7 +437,7 @@ section.article__body ul {
 .article-wrapper:first-child,
 .article-wrapper:last-child,
 .article-wrapper:nth-child(2) {
-  margin: 2rem 0 0;
+  margin: 0 0.5rem 0;
 }
 
 li,
